# kaggle-arc

./: .gitignore  README.md  constants.py  pyproject.toml  readme.md  runner.py  utils.py
base/: field.py  iodata.py  transformers.py  utils.py
kaggle_arc/: constants.py  utils.py
kaggle_arc/base/: __init__.py  field.py  iodata.py  transformers.py  utils.py
kaggle_arc/operations/: basic.py  field2point.py  resizing.py  reversible.py  subpatterns.py
kaggle_arc/predictors/: __init__.py  availability_mixins.py  basic.py  boosting_tree.py  cam_predictor.py  cf_combinator.py  cf_filler.py  cf_selector.py  cf_sorter.py  color_counting.py  complex.py  connector.py  convolution.py  decision_tree.py  field2point.py  graph_boosting_tree.py  shapes.py  subpattern.py
kaggle_arc/predictors/draft_predictors/: cam_predictor.py  cf_filler.py  cf_selector.py  cf_sorter.py
kaggle_arc/scripts/: 0_idpredictor_on_test_script.py  1_complexpredictor_on_test_script.py  2_complexpredictor_coloring.py  convert2ipynb.py  predictor_validator.py
operations/: basic.py  field2point.py  resizing.py  reversible.py  subpatterns.py
predictors/: basic.py  boosting_tree.py  cam_predictor.py  cf_combinator.py  cf_selector.py  cf_sorter.py  color_counting.py  complex.py  connector.py  convolution.py  decision_tree.py  field2point.py  graph_boosting_tree.py  shapes.py  subpattern.py
scripts/: 0_idpredictor_on_test_script.py  1_complexpredictor_on_test_script.py  2_complexpredictor_coloring.py  convert2ipynb.py  predictor_validator.py
